syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.valgaudeau.grpc";

service ServiceOne {
  rpc SayHello(ServiceOneRequest) returns (ServiceOneResponse) {};
}

message ServiceOneRequest {
  string name = 1;
}

message ServiceOneResponse {
  string greeting = 1;
}